--- a/src/styles/Forms.css
+++ b/src/styles/Forms.css
@@ -68,6 +68,10 @@ input:focus {
   font-weight: 700;
 }
 
+.message {
+  font-size: 0.8rem;
+}
+
 @media screen and (min-width: 768px) {
   .form-mobile {
     display: none;
@@ -78,10 +82,16 @@ input:focus {
     align-items: center;
     padding-top: 8rem;
   }
-  .login-form, .reg-form {
+  .login-form {
     border-radius: 1rem;
     width: 400px;
     height: 600px;
+    border: 4px solid #fff;
+  }
+  .reg-form {
+    border-radius: 1rem;
+    width: 400px;
+    height: 700px;
     border: 4px solid #fff;
   }
 }
