--- a/src/styles/Quiz.css
+++ b/src/styles/Quiz.css
@@ -7,12 +7,23 @@
   margin: 0 auto;
 }
 
+.heading {
+  margin: 1rem auto;
+  font-size: 3rem;
+}
+
 .desktop-table {
   display: none;
 }
 
+table {
+  font-size: 1.1rem;
+  padding: 0 1rem;
+}
+
 .tablerow {
-  border-bottom: 1px solid #fff;
+  height: 40px;
+  border-bottom: 0.5px solid #e9e7e7;
 }
 
 @media screen and (min-width: 768px) {
