--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -18,14 +18,6 @@
   background-color: #161A41;
 }
 
-.leaderboard {
-  border-radius: 1rem;
-  max-width: 700px;
-  min-width: 500px;
-  border: 4px solid #fff;
-  background-color: #161A41;
-}
-
 .log-out {
   color: #faf6f6;
   font-weight: 600;
@@ -43,7 +35,7 @@
   justify-content: center;
   align-items: center;
   color: #fff;
-  margin: 0 auto;
+  margin: 0 auto 10rem auto;
 }
 
 .quiz-heading {
@@ -95,10 +87,12 @@ table {
   }
   table {
     font-size: 1.1rem;
+    max-height: 100px;
   }
   .tablerowhead {
     width: 150px;
   }
+
   .tablehead {
     width: 100px;
   }
