--- a/src/styles/Forms.css
+++ b/src/styles/Forms.css
@@ -20,6 +20,14 @@
   background-color: #1F5F82;
 }
 
+.close-icon {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
+  color: #c7c5c5;
+}
+
 input, .password-div  {
   border: none;
   border-radius: 5px;
