--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Lato&family=Source+Sans+Pro&display=swap');
+
 * {
   box-sizing: border-box;
 }
