--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -14,6 +14,10 @@ body {
   min-height: 100vh;
 }
 
+a {
+  color : #fff;
+}
+
 @media screen and (min-width: 768px) {
   .heading {
     margin: 2rem auto;
