--- a/src/styles/Forms.css
+++ b/src/styles/Forms.css
@@ -47,6 +47,33 @@ input:focus {
   outline: none;
 }
 
+.searching {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  color: #1F5F82;
+}
+
+.spinner-border {
+  display: inline-block;
+  width: 4rem;
+  height: 4rem;
+  vertical-align: text-bottom;
+  border: 0.4rem solid currentColor;
+  border-right-color: transparent;
+  border-radius: 50%;
+  -webkit-animation: spinner-border .75s linear infinite;
+  animation: spinner-border .75s linear infinite;
+}
+
+@-webkit-keyframes spinner-border {
+  to { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spinner-border {
+  to { transform: rotate(360deg); }
+}
+
 .error-message {
   height: 1.25rem;
   color: #fff
