--- a/src/styles/Forms.css
+++ b/src/styles/Forms.css
@@ -10,7 +10,10 @@
   display: none;
 }
 
-.login-form, .reg-form, .reset-form {
+.login-form,
+.reg-form,
+.reset-form,
+.verify-form {
   height: 100vh;
   background-color: #161A41;
   text-align: center;
@@ -23,7 +26,8 @@
 
 .login-form h2,
 .reg-form h2,
-.reset-form h2 {
+.reset-form h2,
+.verify-form h2 {
   font-weight: 900;
   letter-spacing: 0.25rem;
   font-family: 'Abril Fatface', cursive;
@@ -47,11 +51,15 @@ input:focus {
   outline: none;
 }
 
-.searching {
+.verifying, .loading {
   width: 100%;
   display: flex;
   justify-content: center;
   color: #1F5F82;
+}
+
+.loading {
+  color: #FFF;
 }
 
 .spinner-border {
@@ -128,6 +136,12 @@ input:focus {
     border-radius: 1rem;
     width: 400px;
     height: 525px;
+    border: 4px solid #fff;
+  }
+  .verify-form {
+    border-radius: 1rem;
+    width: 400px;
+    height: 700px;
     border: 4px solid #fff;
   }
   .reg-form {
